Added device name for identification

--- a/Distribution/MTCFanucAdapter - HSSB.ini
+++ b/Distribution/MTCFanucAdapter - HSSB.ini
@@ -8,7 +8,6 @@ MachineToolConfig = xyz
 
 # Service Name - ignored 
 ServiceName=MTCFanucAdapter
-DeviceName=M1
 
 ##########FOCAS######################
 # IP address of Fanuc CNC
@@ -18,10 +17,10 @@ FanucIpAddress=127.0.0.1
 FocasDelay=2000
 
 #HSSB,LAN
-Protocol=LAN
+Protocol=HSSB
 
 # Port number
-FanucPort=8193
+FanucPort=0
 
 # Fanuc CNC version - ignored for now
 FanucVersion=iSeries
