--- a/Distribution/MTCFanucAdapter.ini
+++ b/Distribution/MTCFanucAdapter.ini
@@ -8,6 +8,7 @@ MachineToolConfig = xyz
 
 # Service Name - ignored 
 ServiceName=MTCFanucAdapter
+DeviceName=M1
 
 ##########FOCAS######################
 # IP address of Fanuc CNC
@@ -29,6 +30,11 @@ FanucVersion=iSeries
 
 # Automatically detect Focas version - ignored
 AutoVersionDetect=0
+
+# Fanuc Focas Functionality enabled flags
+AlarmFlag=1 
+AxesLoadFlag=0	
+ToolingFlag=1		
 
 
 
